// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webRenderNode embeds DailyMotion 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="align--bleed has-video media-large video-embed embed-frame c0"
>
  <span
    class="flex-video widescreen"
  >
    <iframe
      allowfullscreen=""
      class="core-inset"
      data-recommended="false"
      frameborder="0"
      height="448"
      id="dm-x44enl7"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=dm-x44enl7"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="640"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds DeletedEmbed Image inside 1`] = `
.c4 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  position: relative;
  margin: 0 0 1.5rem;
}

.c0:hover .c5 {
  opacity: 1;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  display: block;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  position: absolute;
  max-width: 300px;
  padding: 2rem;
}

.c3 svg {
  color: #666;
}

.c2 {
  background-color: #F5F5F5;
  color: #666;
  box-shadow: none;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.5;
  font-family: ProximaNovaCond,sans-serif;
  background-color: #FFF;
  border: 1px dashed #CCC;
}

.c2 img,
.c2 amp-img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
}

.c2 svg {
  margin-bottom: 1rem;
}

.c6 .c2,
.video-permalink-player__VideoPlayerWrapper-sc-4f1589-2 .c2,
.impact-header-container__ImpactHeaderContainer-sc-1yfcrh4-0 .c2,
.c7 .c2 {
  background-color: #222;
  border: none;
  color: #FFF;
}

.c6 .c2 svg,
.video-permalink-player__VideoPlayerWrapper-sc-4f1589-2 .c2 svg,
.impact-header-container__ImpactHeaderContainer-sc-1yfcrh4-0 .c2 svg,
.c7 .c2 svg {
  color: #FFF;
}

.c6 .c2 {
  border-bottom: 1px dashed #666;
}

.c7 .c2 {
  border-bottom: 1px dashed #666;
}

@media only screen and (max-width:37.31em) {
  .c0 {
    max-width: 100% !important;
    margin: 0 auto 1.5rem !important;
  }
}

@media only screen and (min-width:37.37em) {
  .c0 {
    max-width: 636px;
    margin-left: auto;
    margin-right: auto;
  }
}

@media only screen and (max-width:37.31em) {
  .c3 {
    padding: 1rem;
  }
}

@media only screen and (max-width:37.31em) {
  .c2 {
    position: relative;
  }
}

@media only screen and (max-width:37.31em) {
  .c2 img,
  .c2 amp-img {
    position: relative;
  }
}

@media only screen and (max-width:37.31em) {
  .c2 svg {
    width: 18px;
    height: 18px;
    margin-bottom: 0.5rem;
  }
}

@media only screen and (min-width:63.75em) {
  .c6 .c2 {
    border: 1px dashed #666;
  }
}

@media only screen and (min-width:63.75em) {
  .c7 .c2 {
    border-bottom: none;
    border-left: 1px dashed #666;
  }
}

<figure
  class="align--center has-image c0"
  style="width: 458px; min-width: 250px;"
>
  <div
    style="padding-bottom: 119%;"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          <span
            class="c4"
          >
            <svg
              aria-label="Image icon"
              height="18"
              viewBox="0 0 18 18"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 1A2.5 2.5 0 0 1 18 3.5v11a2.5 2.5 0 0 1-2.5 2.5h-13A2.5 2.5 0 0 1 0 14.5v-11A2.5 2.5 0 0 1 2.5 1h13zM5.36 8.97L1.5 15.61c.26.24.62.39 1.01.39h12.82l-3.68-4.07-2.2 2.4a.5.5 0 0 1-.79-.07l-3.3-5.29zM15.5 2h-13C1.67 2 1 2.67 1 3.5v10.96l3.92-6.71a.5.5 0 0 1 .8-.09l.05.08 3.38 5.43 2.12-2.32a.5.5 0 0 1 .74 0l4.4 4.85c.36-.27.59-.7.59-1.2v-11c0-.83-.67-1.5-1.5-1.5zM12 4a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm0 1a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span>
            This image was removed due to legal reasons.
          </span>
        </span>
      </div>
    </div>
  </div>
</figure>
`;

exports[`webRenderNode embeds DeletedEmbed Intel Pentium Inside 1`] = `
.c5 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  width: 100%;
  height: 100%;
}

.c1 {
  position: relative;
  padding-bottom: 56.25%;
  display: block;
  width: 100%;
  z-index: 1;
}

.c8 .c1 {
  height: 100%;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  display: block;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  position: absolute;
  max-width: 300px;
  padding: 2rem;
}

.c4 svg {
  color: #666;
}

.c3 {
  background-color: #F5F5F5;
  color: #666;
  box-shadow: none;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.5;
  font-family: ProximaNovaCond,sans-serif;
  background-color: #FFF;
  border: 1px dashed #CCC;
}

.c3 img,
.c3 amp-img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
}

.c3 svg {
  margin-bottom: 1rem;
}

.c6 .c3,
.video-permalink-player__VideoPlayerWrapper-sc-4f1589-2 .c3,
.c8 .c3,
.c7 .c3 {
  background-color: #222;
  border: none;
  color: #FFF;
}

.c6 .c3 svg,
.video-permalink-player__VideoPlayerWrapper-sc-4f1589-2 .c3 svg,
.c8 .c3 svg,
.c7 .c3 svg {
  color: #FFF;
}

.c6 .c3 {
  border-bottom: 1px dashed #666;
}

.c7 .c3 {
  border-bottom: 1px dashed #666;
}

@media only screen and (max-width:37.31em) {
  .c4 {
    padding: 1rem;
  }
}

@media only screen and (max-width:37.31em) {
  .c3 {
    position: relative;
  }
}

@media only screen and (max-width:37.31em) {
  .c3 img,
  .c3 amp-img {
    position: relative;
  }
}

@media only screen and (max-width:37.31em) {
  .c3 svg {
    width: 18px;
    height: 18px;
    margin-bottom: 0.5rem;
  }
}

@media only screen and (min-width:63.75em) {
  .c6 .c3 {
    border: 1px dashed #666;
  }
}

@media only screen and (min-width:63.75em) {
  .c7 .c3 {
    border-bottom: none;
    border-left: 1px dashed #666;
  }
}

<div
  class="has-media has-embed has-video media-large c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <span
          class="c4"
        >
          <span
            class="c5"
          >
            <svg
              aria-label="ExternalLinkError icon"
              height="18"
              viewBox="0 0 18 18"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 3a.5.5 0 0 1 0 1H3.5C2.67 4 2 4.67 2 5.5v9c0 .83.67 1.5 1.5 1.5h9c.83 0 1.5-.67 1.5-1.5V11a.5.5 0 1 1 1 0v3.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 14.5v-9A2.5 2.5 0 0 1 3.5 3zm11.1-1.4L13.7 5l3.4 3.4c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.7 0L13 5.7 9.6 9.1c-.47.47-1.17-.23-.7-.7L12.3 5 8.9 1.6a.5.5 0 0 1-.06-.63L8.9.9c.2-.2.5-.2.7 0L13 4.3 16.4.9c.47-.47 1.17.23.7.7z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span>
            This content is no longer available. :(
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`webRenderNode embeds DeletedEmbed storify inside 1`] = `
.c5 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  width: 100%;
  height: 100%;
}

.c1 {
  position: relative;
  padding-bottom: 56.25%;
  display: block;
  width: 100%;
  z-index: 1;
}

.c8 .c1 {
  height: 100%;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  display: block;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  position: absolute;
  max-width: 300px;
  padding: 2rem;
}

.c4 svg {
  color: #666;
}

.c3 {
  background-color: #F5F5F5;
  color: #666;
  box-shadow: none;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.5;
  font-family: ProximaNovaCond,sans-serif;
  background-color: #FFF;
  border: 1px dashed #CCC;
}

.c3 img,
.c3 amp-img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
}

.c3 svg {
  margin-bottom: 1rem;
}

.c6 .c3,
.video-permalink-player__VideoPlayerWrapper-sc-4f1589-2 .c3,
.c8 .c3,
.c7 .c3 {
  background-color: #222;
  border: none;
  color: #FFF;
}

.c6 .c3 svg,
.video-permalink-player__VideoPlayerWrapper-sc-4f1589-2 .c3 svg,
.c8 .c3 svg,
.c7 .c3 svg {
  color: #FFF;
}

.c6 .c3 {
  border-bottom: 1px dashed #666;
}

.c7 .c3 {
  border-bottom: 1px dashed #666;
}

@media only screen and (max-width:37.31em) {
  .c4 {
    padding: 1rem;
  }
}

@media only screen and (max-width:37.31em) {
  .c3 {
    position: relative;
  }
}

@media only screen and (max-width:37.31em) {
  .c3 img,
  .c3 amp-img {
    position: relative;
  }
}

@media only screen and (max-width:37.31em) {
  .c3 svg {
    width: 18px;
    height: 18px;
    margin-bottom: 0.5rem;
  }
}

@media only screen and (min-width:63.75em) {
  .c6 .c3 {
    border: 1px dashed #666;
  }
}

@media only screen and (min-width:63.75em) {
  .c7 .c3 {
    border-bottom: none;
    border-left: 1px dashed #666;
  }
}

<div
  class="has-media has-embed has-video media-large c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <span
          class="c4"
        >
          <span
            class="c5"
          >
            <svg
              aria-label="ExternalLinkError icon"
              height="18"
              viewBox="0 0 18 18"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 3a.5.5 0 0 1 0 1H3.5C2.67 4 2 4.67 2 5.5v9c0 .83.67 1.5 1.5 1.5h9c.83 0 1.5-.67 1.5-1.5V11a.5.5 0 1 1 1 0v3.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 14.5v-9A2.5 2.5 0 0 1 3.5 3zm11.1-1.4L13.7 5l3.4 3.4c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.7 0L13 5.7 9.6 9.1c-.47.47-1.17-.23-.7-.7L12.3 5 8.9 1.6a.5.5 0 0 1-.06-.63L8.9.9c.2-.2.5-.2.7 0L13 4.3 16.4.9c.47-.47 1.17.23.7.7z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span>
            There used to be a Storify embed here, but
            <a
              href="https://storify.com/faq-eol"
              rel="noopener noreferrer"
              target="_blank"
            >
               Storify doesn’t exist anymore.
            </a>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`webRenderNode embeds Facebook 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="embed-frame c0"
>
  <span
    class="non-flex-video"
  >
    <iframe
      allowfullscreen=""
      autoresize="true"
      class="core-inset"
      data-recommended="false"
      frameborder="0"
      height="360"
      id="fb-10153915420718967"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=fb-10153915420718967&autosize=1"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="640"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds Imgur 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="embed-frame c0"
>
  <span
    class=""
  >
    <iframe
      allowfullscreen=""
      autoresize="true"
      class="core-inset"
      data-recommended="false"
      frameborder="0"
      id="imgur-243598"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=imgur-243598&autosize=1"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="800"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds Instagram 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="embed-frame c0"
>
  <span
    class="non-flex-video centered-frame"
  >
    <iframe
      allowfullscreen=""
      autoresize="true"
      class="core-inset"
      data-recommended="false"
      frameborder="0"
      height="676"
      id="instagram-BInFir8jHbf"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=instagram-BInFir8jHbf&autosize=1"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="598"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds KinjaVideo no caption 1`] = `
.c1 {
  position: relative;
  width: 100%;
  height: 100%;
}

.c1 .video-js .vjs-big-play-button {
  display: none;
}

.c1 .vjs-workinghover .vjs-subs-caps-button.vjs-menu-button-popup:hover .vjs-menu {
  display: none;
}

.c1 .video-js ul.vjs-menu-content .vjs-menu-item {
  margin: 0;
  font-size: 0.7rem;
}

.c1 .video-js ul.vjs-menu-content .vjs-menu-item-text {
  margin: 0;
  font-size: 0.7rem;
}

.c1 video {
  width: 100%;
  height: 100%;
  cursor: pointer;
  outline: none;
}

.c1 .video-js {
  width: 100%;
  height: 100%;
}

.c2 .video-js {
  width: 100%;
  height: 100%;
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 30px;
  cursor: pointer;
}

.c3 .icon-wrapper {
  position: absolute;
  top: calc(50% + 15px);
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 15%;
  height: 0;
  padding-bottom: 15%;
  overflow: visible;
}

.c3 .icon {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 22;
}

.c3 .icon-wrapper::after {
  content: '';
  position: absolute;
  top: -50%;
  left: -50%;
  width: 200%;
  height: 200%;
  background: radial-gradient(circle closest-side at center,rgba(0,0,0,0.25),rgba(0,0,0,0) 100%);
  z-index: -1;
  overflow: visible;
}

.c3:hover .icon-wrapper::after {
  background: radial-gradient(circle closest-side at center,rgba(0,0,0,0.5),rgba(0,0,0,0) 100%);
}

.c0 {
  margin-bottom: 1.5rem;
}

<div
  class="js_video-wrapper c0"
  data-caption="[]"
  id="172249"
>
  <div>
    <div
      class="c1"
    >
      <div
        class="c2"
        data-vjs-player="true"
      >
        <video
          class="video-js"
          height="100%"
          playsinline=""
          poster="https://i.kinja-img.com/gawker-media/image/upload/c_fill,f_auto,fl_progressive,g_center,h_450,q_80,w_800/buhpuqrq85wectdvzysp.jpg"
          width="100%"
        />
      </div>
      <div
        class="c3"
        role="button"
      >
        
	
        <div
          class="icon-wrapper"
        >
          
		
          <svg
            aria-label="PlayFilled icon"
            class="icon"
            height="18"
            viewBox="0 0 18 18"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            
			
            <path
              d="M5.3 16.7c-1.1.7-2.3 0-2.3-1.3V2.6c0-1.4 1.2-2 2.3-1.3l9.9 6.3c1 .7 1 2 0 2.7l-9.9 6.4z"
              fill="white"
            />
            
		
          </svg>
          
	
        </div>
        

      </div>
    </div>
  </div>
</div>
`;

exports[`webRenderNode embeds KinjaVideo with caption 1`] = `
.c6 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  color: #222;
  -webkit-transition: color 0.1s ease-out;
  transition: color 0.1s ease-out;
  box-shadow: inset 0 -2px 0 #0A7BC2;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:hover {
  color: #0A7BC2;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  margin-top: 0.5rem;
  font-family: ProximaNovaCond,sans-serif;
  font-size: 15px;
  line-height: 21px;
  color: #7D7D7D;
  text-align: left;
}

figcaption + .c4 {
  margin-top: 0;
}

.c1 {
  position: relative;
  width: 100%;
  height: 100%;
}

.c1 .video-js .vjs-big-play-button {
  display: none;
}

.c1 .vjs-workinghover .vjs-subs-caps-button.vjs-menu-button-popup:hover .vjs-menu {
  display: none;
}

.c1 .video-js ul.vjs-menu-content .vjs-menu-item {
  margin: 0;
  font-size: 0.7rem;
}

.c1 .video-js ul.vjs-menu-content .vjs-menu-item-text {
  margin: 0;
  font-size: 0.7rem;
}

.c1 video {
  width: 100%;
  height: 100%;
  cursor: pointer;
  outline: none;
}

.c1 .video-js {
  width: 100%;
  height: 100%;
}

.c2 .video-js {
  width: 100%;
  height: 100%;
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 30px;
  cursor: pointer;
}

.c3 .icon-wrapper {
  position: absolute;
  top: calc(50% + 15px);
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 15%;
  height: 0;
  padding-bottom: 15%;
  overflow: visible;
}

.c3 .icon {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 22;
}

.c3 .icon-wrapper::after {
  content: '';
  position: absolute;
  top: -50%;
  left: -50%;
  width: 200%;
  height: 200%;
  background: radial-gradient(circle closest-side at center,rgba(0,0,0,0.25),rgba(0,0,0,0) 100%);
  z-index: -1;
  overflow: visible;
}

.c3:hover .icon-wrapper::after {
  background: radial-gradient(circle closest-side at center,rgba(0,0,0,0.5),rgba(0,0,0,0) 100%);
}

.c0 {
  margin-bottom: 1.5rem;
}

<div
  class="js_video-wrapper c0"
  data-caption="[{\\"type\\":\\"Text\\",\\"value\\":\\"ICE COLD! (\\",\\"styles\\":[]},{\\"type\\":\\"Link\\",\\"value\\":[{\\"type\\":\\"Text\\",\\"value\\":\\"Flickr: Ben\\",\\"styles\\":[]}],\\"reference\\":\\"https://example.com\\"},{\\"type\\":\\"Text\\",\\"value\\":\\")\\",\\"styles\\":[]}]"
  id="172249"
>
  <div>
    <div
      class="c1"
    >
      <div
        class="c2"
        data-vjs-player="true"
      >
        <video
          class="video-js"
          height="100%"
          playsinline=""
          poster="https://i.kinja-img.com/gawker-media/image/upload/c_fill,f_auto,fl_progressive,g_center,h_450,q_80,w_800/buhpuqrq85wectdvzysp.jpg"
          width="100%"
        />
      </div>
      <div
        class="c3"
        role="button"
      >
        
	
        <div
          class="icon-wrapper"
        >
          
		
          <svg
            aria-label="PlayFilled icon"
            class="icon"
            height="18"
            viewBox="0 0 18 18"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            
			
            <path
              d="M5.3 16.7c-1.1.7-2.3 0-2.3-1.3V2.6c0-1.4 1.2-2 2.3-1.3l9.9 6.3c1 .7 1 2 0 2.7l-9.9 6.4z"
              fill="white"
            />
            
		
          </svg>
          
	
        </div>
        

      </div>
    </div>
  </div>
  <figcaption
    class="caption c4"
  >
    ICE COLD! (
    <span>
      <a
        class="c5 js_link c6"
        data-ga="[[\\"Embedded Url\\",\\"External link\\",\\"https://example.com\\",{\\"metric25\\":1}]]"
        href="https://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Flickr: Ben
      </a>
    </span>
    )
  </figcaption>
</div>
`;

exports[`webRenderNode embeds Megaphone 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="embed-frame c0"
>
  <span
    class="megaphone"
  >
    <iframe
      allowfullscreen=""
      class="core-inset"
      data-recommended="false"
      frameborder="0"
      height="150"
      id="megaphone-DMO8510552889"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=megaphone-DMO8510552889"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="640"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds Mixcloud 1`] = `
<p>
  <iframe
    allowfullscreen=""
    class="custom"
    frameborder="0"
    height="180"
    mozallowfullscreen="mozallowfullscreen"
    scrolling="no"
    src="//www.mixcloud.com/widget/iframe/?feed=%2Fdj-echo%2Fecho-100%2F&hide_tracklist=1&hide_cover=1&embed_type=widget_standard"
    webkitallowfullscreen="webkitAllowFullScreen"
    width="100%"
  />
</p>
`;

exports[`webRenderNode embeds Ooyala 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="align--bleed has-video media-large video-embed embed-frame c0"
>
  <span
    class="flex-video widescreen"
  >
    <iframe
      allowfullscreen=""
      class="core-inset"
      data-recommended="false"
      frameborder="0"
      height="450"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=ooyala-hocDU4NzE62S9bTYEuXDBGbPRYLsE2yT%2Fe94d1153704449a897d545a2af16e53c"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="800"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds Qzzr 1`] = `
<p>
  <iframe
    allowfullscreen=""
    class="qzzr"
    frameborder="0"
    height="500"
    mozallowfullscreen="mozallowfullscreen"
    scrolling="no"
    src="//www.qzzr.com/widget/quiz/165300"
    webkitallowfullscreen="webkitAllowFullScreen"
    width="100%"
  />
</p>
`;

exports[`webRenderNode embeds Soundcloud 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="embed-frame c0"
>
  <span
    class="non-flex-video soundcloud"
  >
    <iframe
      allowfullscreen=""
      class="core-inset"
      data-recommended="false"
      frameborder="0"
      height="166"
      id="soundcloud-220076771"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=soundcloud-220076771"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="640"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds Soundcloud playlist 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="embed-frame c0"
>
  <span
    class="non-flex-video soundcloud"
  >
    <iframe
      allowfullscreen=""
      class="core-inset"
      data-recommended="false"
      frameborder="0"
      height="450"
      id="soundcloud-playlist-40033455"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=soundcloud-playlist-40033455"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="640"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds Tumblr 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="embed-frame c0"
>
  <span
    class=""
  >
    <iframe
      allowfullscreen=""
      autoresize="true"
      class="core-inset"
      data-recommended="false"
      frameborder="0"
      height="800"
      id="tumblr-post-147955529854-gazs"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=tumblr-post-147955529854-gazs&autosize=1"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="640"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds TwitchStream 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="align--bleed has-video media-large video-embed embed-frame c0"
>
  <span
    class="flex-video widescreen"
  >
    <iframe
      allowfullscreen=""
      class="core-inset"
      data-recommended="false"
      frameborder="0"
      height="360"
      id="twitch-stream-gosugamers"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=twitch-stream-gosugamers"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="640"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds TwitchVideo 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="align--bleed has-video media-large video-embed embed-frame c0"
>
  <span
    class="flex-video widescreen"
  >
    <iframe
      allowfullscreen=""
      class="core-inset"
      data-recommended="false"
      frameborder="0"
      height="360"
      id="twitch-video-69248712"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=twitch-video-69248712"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="640"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds Twitter 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="embed-frame c0"
>
  <span
    class="twitter-embed"
  >
    <iframe
      allowfullscreen=""
      autoresize="true"
      class="core-inset"
      data-recommended="false"
      frameborder="0"
      height="159"
      id="twitter-739490015772839936"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=twitter-739490015772839936&autosize=1"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="500"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds Typeform 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="embed-frame c0"
>
  <span
    class=""
  >
    <iframe
      allowfullscreen=""
      class="core-inset lazyload"
      data-recommended="false"
      data-src="/ajax/inset/iframe?id=typeform-clickhole-Zh9XTz"
      frameborder="0"
      height="640"
      id="typeform-clickhole-Zh9XTz"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="640"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds Ustream 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="align--bleed has-video media-large video-embed embed-frame c0"
>
  <span
    class="flex-video widescreen"
  >
    <iframe
      allowfullscreen=""
      class="core-inset"
      data-recommended="false"
      frameborder="0"
      height="360"
      id="ustream-video-84781321"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=ustream-video-84781321"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="640"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds UstreamLive 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="align--bleed has-video media-large video-embed embed-frame c0"
>
  <span
    class="flex-video widescreen"
  >
    <iframe
      allowfullscreen=""
      class="core-inset"
      data-recommended="false"
      frameborder="0"
      height="360"
      id="ustream-channel-1041782"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=ustream-channel-1041782"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="640"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds Viddler 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="has-video media-large embed-frame c0"
>
  <span
    class="flex-video widescreen"
  >
    <iframe
      allowfullscreen=""
      class="core-inset"
      data-recommend-id="viddler://e5b3acca"
      data-recommended="false"
      frameborder="0"
      height="360"
      id="viddler-e5b3acca"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=viddler-e5b3acca"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="640"
    />
    <span
      class="js_recommend"
      data-recommend-id="viddler://e5b3acca"
      data-recommended="false"
      id="viddler-e5b3acca"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds Vimeo 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="align--bleed has-video media-large video-embed embed-frame c0"
>
  <span
    class="flex-video widescreen"
  >
    <iframe
      allowfullscreen=""
      class="core-inset"
      data-recommend-id="vimeo://159069175"
      data-recommended="false"
      frameborder="0"
      height="450"
      id="vimeo-159069175"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=vimeo-159069175"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="800"
    />
    <span
      class="js_recommend"
      data-recommend-id="vimeo://159069175"
      data-recommended="false"
      id="vimeo-159069175"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds Vine 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="embed-frame c0"
>
  <span
    class="non-flex-video"
  >
    <iframe
      allowfullscreen=""
      autoresize="true"
      class="core-inset"
      data-recommended="false"
      frameborder="0"
      height="786"
      id="vine-5WvdIEvMOap"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=vine-5WvdIEvMOap&autosize=1"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="640"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds Waywire 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="align--bleed has-video media-large video-embed embed-frame c0"
>
  <span
    class="flex-video widescreen"
  >
    <iframe
      allowfullscreen=""
      class="core-inset"
      data-recommended="false"
      frameborder="0"
      height="450"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=waywire-W265Z105JY8H0V1G"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="800"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds Youtube should render to embed with specified start time 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="align--bleed has-video media-large video-embed embed-frame c0"
>
  <span
    class="flex-video widescreen"
  >
    <iframe
      allowfullscreen=""
      class="core-inset"
      data-chomp-id="1Y1ya-yF35g"
      data-recommend-id="youtube://1Y1ya-yF35g"
      data-recommended="false"
      frameborder="0"
      height="450"
      id="youtube-1Y1ya-yF35g"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=youtube-video-1Y1ya-yF35g&start=424"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="800"
    />
    <span
      class="js_recommend"
      data-chomp-id="1Y1ya-yF35g"
      data-recommend-id="youtube://1Y1ya-yF35g"
      data-recommended="false"
      id="youtube-1Y1ya-yF35g"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds Youtube should render to embed with the expected caption 1`] = `
.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  color: #222;
  -webkit-transition: color 0.1s ease-out;
  transition: color 0.1s ease-out;
  box-shadow: inset 0 -2px 0 #0A7BC2;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:hover {
  color: #0A7BC2;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  margin-top: 0.5rem;
  font-family: ProximaNovaCond,sans-serif;
  font-size: 15px;
  line-height: 21px;
  color: #7D7D7D;
  text-align: left;
}

figcaption + .c1 {
  margin-top: 0;
}

.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c4 {
  opacity: 1;
}

<div
  class="align--bleed has-video media-large video-embed embed-frame c0"
>
  <span
    class="flex-video widescreen"
  >
    <iframe
      allowfullscreen=""
      class="core-inset"
      data-chomp-id="1Y1ya-yF35g"
      data-recommend-id="youtube://1Y1ya-yF35g"
      data-recommended="false"
      frameborder="0"
      height="450"
      id="youtube-1Y1ya-yF35g"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=youtube-video-1Y1ya-yF35g&start=0"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="800"
    />
    <span
      class="js_recommend"
      data-chomp-id="1Y1ya-yF35g"
      data-recommend-id="youtube://1Y1ya-yF35g"
      data-recommended="false"
      id="youtube-1Y1ya-yF35g"
    />
  </span>
  <figcaption
    class="caption c1"
  >
    ICE COLD! (
    <span>
      <a
        class="c2 js_link c3"
        data-ga="[[\\"Embedded Url\\",\\"External link\\",\\"https://example.com\\",{\\"metric25\\":1}]]"
        href="https://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Flickr: Ben
      </a>
    </span>
    )
  </figcaption>
</div>
`;

exports[`webRenderNode embeds YoutubePlaylist with initial video 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="has-video media-large embed-frame c0"
>
  <span
    class="flex-video widescreen"
  >
    <iframe
      allowfullscreen=""
      class="core-inset"
      data-chomp-id="RDndXwTPAFjSU"
      data-recommend-id="youtube://RDndXwTPAFjSU"
      data-recommended="false"
      frameborder="0"
      height="450"
      id="youtube-RDndXwTPAFjSU"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="/ajax/inset/iframe?id=youtube-list-ndXwTPAFjSU%2FRDndXwTPAFjSU&start=0"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="800"
    />
    <span
      class="js_recommend"
      data-chomp-id="RDndXwTPAFjSU"
      data-recommend-id="youtube://RDndXwTPAFjSU"
      data-recommended="false"
      id="youtube-RDndXwTPAFjSU"
    />
  </span>
</div>
`;

exports[`webRenderNode embeds YoutubePlaylist without initial video 1`] = `
.c0 .flex-video {
  display: block;
  margin-bottom: 0;
}

.c0 .flex-video.widescreen {
  padding-bottom: 52.9%;
}

.c0 .megaphone {
  display: block;
  margin: 2rem auto;
}

.c0:hover .c1 {
  opacity: 1;
}

<div
  class="has-video media-large embed-frame c0"
>
  <span
    class="flex-video widescreen"
  >
    <iframe
      allowfullscreen=""
      class="core-inset"
      data-chomp-id="RDndXwTPAFjSU"
      data-recommend-id="youtube://RDndXwTPAFjSU"
      data-recommended="false"
      frameborder="0"
      height="450"
      id="youtube-RDndXwTPAFjSU"
      mozallowfullscreen="mozallowfullscreen"
      scrolling="no"
      src="https://www.youtube.com/embed/videoseries?list=RDndXwTPAFjSU"
      webkitallowfullscreen="webkitAllowFullScreen"
      width="800"
    />
    <span
      class="js_recommend"
      data-chomp-id="RDndXwTPAFjSU"
      data-recommend-id="youtube://RDndXwTPAFjSU"
      data-recommended="false"
      id="youtube-RDndXwTPAFjSU"
    />
  </span>
</div>
`;
